# VerkleTries_Besu

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.sh  native-build.sh  settings.gradle
.github/workflows/: build.yml
ipa-multipoint/: build.gradle
ipa-multipoint/ipa_multipoint_jni/: Cargo.toml
ipa-multipoint/ipa_multipoint_jni/src/: lib.rs
ipa-multipoint/ipa_multipoint_jni/src/proofs/: proverint.rs  trieproof.rs
ipa-multipoint/src/main/java/org/hyperledger/besu/ethereum/trie/verkle/: BranchNode.java  CommitVisitor.java  Constants.java  EmptyNode.java  ExtensionNode.java  GetVisitor.java  HashVisitor.java  Hasher.java  IPAHasher.java  InternalNode.java  LeafNode.java  Node.java  NodeFactory.java  NodeLoader.java  NodeUpdater.java  NodeVisitor.java  NullNode.java  PathNodeVisitor.java  PedersenHash.java  PutVisitor.java  RemoveVisitor.java  SHA256Hasher.java  SimpleVerkleTrie.java  StoredNodeFactory.java  SuffixExtensionNode.java  TrieKeyAdapter.java  UnknownNode.java  VerkleNode.java  VerkleTrie.java
ipa-multipoint/src/main/java/org/hyperledger/besu/ethereum/trie/verkle/bandersnatch/: Point.java  PointAffine.java
ipa-multipoint/src/main/java/org/hyperledger/besu/ethereum/trie/verkle/bandersnatch/fp/: Element.java
ipa-multipoint/src/main/java/org/hyperledger/besu/ethereum/trie/verkle/bandersnatch/fr/: Element.java
ipa-multipoint/src/main/java/org/hyperledger/besu/nativelib/ipamultipoint/: LibIpaMultipoint.java
ipa-multipoint/src/test/java/org/hyperledger/besu/ethereum/trie/verkle/: CommitVisitorTest.java  InternalNodeTest.java  NodeLoaderMock.java  NodeUpdaterMock.java  PedersenHashTest.java  SimpleVerkleTrieTest.java  StoredVerkleTrieTest.java  TrieKeyAdapterTest.java
ipa-multipoint/src/test/java/org/hyperledger/besu/ethereum/trie/verkle/bandersnatch/fp/: ElementTest.java
ipa-multipoint/src/test/java/org/hyperledger/besu/ethereum/trie/verkle/bandersnatch/fr/: ElementTest.java
ipa-multipoint/src/test/java/org/hyperledger/besu/nativelib/ipa_multipoint/: LibIpaMultipointTest.java  PedersenCommitmentTest.java  pedersen_commitment_test.json  pedersen_hash_test.json
ipa-multipoint/src/test/resources/: pedersen_commitment_test.json
tests/code-chunks/python/: chunkify.py
tests/code-chunks/python/outputs/: erc20-chunks.json
tests/pedersen/: genesis_lvl1_commits.json
tests/pedersen/golang/: go.mod  go.sum  main.go
tests/root-hashes/golang/: go.mod  go.sum  main.go
tests/root-hashes/rust/: Cargo.toml  README.md
tests/root-hashes/rust/src/: main.rs
