#
# Copyright Besu Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ipa_multipoint_jni"
version = "0.1.0"
description = "IPA Multipoint Crypto Library"
license = "Apache-2.0"
authors = ["Antoine Toulme <antoine@lunar-ocean.com>"]
repository = "https://github.com/hyperledger/besu-native"
edition = "2018"

[dependencies]
anyhow = "1.0"
tempfile = "3.2.0"
thiserror = "1.0"
ipa-multipoint = { git = "https://github.com/crate-crypto/ipa_multipoint", branch = "banderwagon_migration" }
banderwagon = { git = "https://github.com/crate-crypto/banderwagon" }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
verkle-db = { git = "https://github.com/crate-crypto/rust-verkle", branch = "master" }
verkle-trie = { git = "https://github.com/crate-crypto/rust-verkle", branch = "master" }
verkle-spec = { git = "https://github.com/crate-crypto/rust-verkle", branch = "master" }
once_cell = "1.8.0"
hex = "0.4.3"
rand_chacha = { version = "0.3.0", default-features = false }
rayon = "1.5.1"
smallvec = "1.6.1"
sha2 = "0.9.3"
itertools = "0.10.1"
jni = { version = "0.19.0", features = ["invocation"] } 

[dev-dependencies]
criterion = "0.3.4"
tempfile = "3.2.0"

[lib]
name = "ipa_multipoint_jni"
crate-type = ["cdylib"]